--- a/style.css
+++ b/style.css
@@ -1,26 +1,37 @@
-.banner{
-	height: 705px;
-	background-image: url("levenim.jpg");
-	background-size: cover;
-	/* padding-top: 230px; */
+.background{
+    background-image: url("levenim.jpg"); /*  third page */
+    background-size: cover;
     box-sizing: border-box;
     background-size: 100% 100%;
-    padding-top: 40px;
+    height: 705px;
+    padding-top: 40px; /*  third page */
+
 }
 
-#table{
-    width: 100%;
-    margin-bottom: 40px;
-}
 
 input[type="text"]{
     width: 100%; 
     height: 40px;
     background-color: rgb(232,219,232); 
     font-size: 20px;
-    text-align: center;
-   
+    text-align: center;  
 }
+
+#table{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.choosedifh1{
+    text-align: center;
+    color: rgb(83, 195, 236);
+    margin-top: 20px;
+}
+
+
 .borderTop{
     border-top: 5px solid #000a3f;
 }
@@ -33,22 +44,38 @@ input[type="text"]{
     border-right: 5px solid #000a3f; 
 }
 
-
 #easy{
-    /* background-color: #ffff66; */
     background-color: #ff9900;
-    outline: none;
+    outline: none; 
 }
 
 #medium{
     background-color: rgb(187,135,236);
 
-}
+} 
 
-.diff{
+.diffbtn{
     width: 150px;
+    margin-bottom: 10px;
+} 
+
+/* define layouts on medium screens */
+
+@media (min-width: 768px) and (max-width: 991px) { 
+    #table {
+        height: 80%;
+        width: 80%;
+    } 
+   
+
 }
 
-h1, h2, h3{
-    color: rgb(83, 195, 236);
+/* define layouts on mobile screens */
+
+@media screen and (max-width: 767px) {
+    #table {
+        height: 80%;
+        width: 80%;
+    } 
+   
 }
