--- a/style3.css
+++ b/style3.css
@@ -1,5 +1,5 @@
 .background{
-    background-image: url("levenim.jpg"); /*  third page */
+    background-image: url("bitmap.png"); /*  third page */
     background-size: cover;
     box-sizing: border-box;
     background-size: 100% 100%;
