added the correct background file

--- a/style1.css
+++ b/style1.css
@@ -1,6 +1,6 @@
 .background{
 	height: 705px; 
-	background-image: url("reka02.jpg");
+	background-image: url("rekafinal.png");
 	background-size: cover;
     box-sizing: border-box;
     background-size: 100% 100%;
