--- a/style3.css
+++ b/style3.css
@@ -16,11 +16,10 @@ input[type="text"]{
     font-size: 20px;
     text-align: center;  
 }
-
 #table{
     width: 100%;
     height: 100%;
-    position: relative;
+    /* position: relative; */
     margin-left: auto;
     margin-right: auto;
 }
