--- a/style3.css
+++ b/style3.css
@@ -16,6 +16,9 @@ input[type="text"]{
     font-size: 20px;
     text-align: center;  
 }
+input[type="text"]:focus{
+    background-color: #ff9900 !important;
+}
 #table{
     width: 100%;
     height: 100%;
