added radio, eventlistener,and fixed entercheck()

--- a/style1.css
+++ b/style1.css
@@ -12,7 +12,7 @@
     font-weight: bold;  */
     text-align: center; 
 } 
-
+.hidden { font-size: 0; }
 p{
     /* color: #800080; */
     color: rgb(83, 195, 236);
