minor correction to css

--- a/style2.css
+++ b/style2.css
@@ -48,7 +48,7 @@ h3{
     width: 150px;
 }
 .radioBtnChoice{
-    color: #8a5082;
+    color: #eeb462;
     font-size: 20px;
     margin-top: 40px;
 }
