--- a/style1.css
+++ b/style1.css
@@ -9,7 +9,7 @@
 	background-size: cover;
     box-sizing: border-box;
     background-size: 100% 100%;
-    height: 1000px;
+    /* height: 1000px; */
     padding-top: 250px;
 }
 body {
