--- a/style1.css
+++ b/style1.css
@@ -9,14 +9,16 @@
 	background-size: cover;
     box-sizing: border-box;
     background-size: 100% 100%;
-    height: 1000px;
     padding-top: 250px;
 }
-
+body{
+    overflow: hidden;
+}
 .backgroundBlock{
     /* font-size: 30px;
     font-weight: bold;  */
     text-align: center; 
+    
 } 
 .hidden { font-size: 0; }
 p{
