--- a/style3.css
+++ b/style3.css
@@ -4,13 +4,16 @@
     position: absolute;
     top: 0;
     left: 0;  
-    background-image: url("bitmap.png"); /*  third page */
+    background-image: url("bitmap.png"); 
     background-size: cover;
     box-sizing: border-box;
     background-size: 100% 100%;
-    height: 705px;
-    padding-top: 40px; /*  third page */
+    padding-top: 40px; 
 
+}
+
+body{
+    overflow: hidden;
 }
 
 
